--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     font-size: 16px;
     color: #666;
     box-shadow: 2px 2px 8px 2px rgba(128, 128, 128, 128);
+    display: none;
+}
+
+.ui-datepicker-wrapper-show{
+    display: block;
 }
 
 .ui-datepicker-wrapper .ui-datepicker-header{
