--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-date-range-picker></app-date-range-picker>
+<app-date-range-picker [maxDate]='maxDate' [minDate]='minDate' (dateRangeSubmit)='dateRangeSubmit($event)'></app-date-range-picker>
